#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-10-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999929 released.

        * Added robust code to check sshd status during install.

        * Added wait of 15 seconds before displaying semaphore
          lock warning on FullAuto startup.


2012-10-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999928 released.

        * "Finally" Fixed Makefile.PL hang condition in Windows.

        * Fixed Makefile.PL syntax error.


2012-10-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999927 released.

        * Fixed more Makefile.PL issues with Cygwin.


2012-10-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999926 released.

        * Added Set item to admin menu.


2012-09-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999925 released.

        * Added "help" and "admin" menus to all FullAuto menus.


2012-09-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999924 released.

        * Lots of fixes for mirror() functionality.


2012-09-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999923 released.

        * Added version argument to fa_install_mod() in Makefile.PL.

        * Added Cache::Cache as a prerequisite.


2012-09-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999922 released.

        * Added ExtUtils::MakeMaker to META.yml, removed YAML.


2012-09-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999921 released.
