@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 4630cab7fd4d9563ea814be068e4646f107ed42b ChangeLog
+SHA1 4e326286f8b7d6e5cc48cc2a0b55a4b8c912dcac ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 4151b98dd5232af49f6aeded844442acdca15c42 META.yml
-SHA1 b1b9bbdcf3e9de3c3266e5b7baaf1765d87bec23 MYMETA.json
-SHA1 fe4705d7a2db84bf30d0c4171023a947e363ac4a MYMETA.yml
-SHA1 faffaff0bcbaca918b0d5533fc98ca79b667e8d3 Makefile.PL
+SHA1 3d6cd4b42310d96eb8a714ddaf9847d4b16d1459 META.yml
+SHA1 3dafbb2f877ed51e281ecfe7651294827cbeb5a9 MYMETA.json
+SHA1 b96263b5f9b98939106b44c8e16f523d7088e35e MYMETA.yml
+SHA1 2e4012720601f02158e830af647aa2339f51a8a6 Makefile.PL
 SHA1 fd6c642523f44765fc64b3515231a3ad62f90d73 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 4fd1ff21ec0dc5eaa75891d14ba2e87581b7618d lib/Net/FullAuto.pm
+SHA1 3f2842a658823425ff34e909e4c537e3aa4ff5bc lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -54,7 +54,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlBweXMACgkQJM3IZYB6aOqa3wCfdsp3ps/u44eY53s32uOm0rwt
-JyAAn2c8lmFh0NEb32rahBeTKY5Yz0Ex
-=wbBK
+iEYEARECAAYFAlBxBmEACgkQJM3IZYB6aOoJFwCgqCiaW44528SFQK1Exsp2HejS
+V00AoJFwaVuUkrgB6gT5atEwMVJFnHLl
+=omf9
 -----END PGP SIGNATURE-----
