@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999929';
+our $VERSION='0.999930';
 
 
 use 5.005;
